<resources>
    <string name="app_name">FoodRocket</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>

    <string name="nav_header_title">Nguyễn Văn A</string>
    <string name="nav_header_subtitle">nguyenvana@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_product_management">Quản lý sản phẩm</string>
    <string name="menu_order_management">Quản lý đơn hàng</string>
    <string name="menu_user_management">Quản lý người dùng</string>
    <string name="menu_category_management">Quản lý danh mục sản phẩm</string>
    <string name="menu_role_management">Quản lý vai trò</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_add_category">Thêm danh mục</string>
    <string name="btn_update_category">Cập nhật danh mục</string>
    <string name="btn_update_role">Cập nhật vai trò</string>
    <string name="btn_update_product">Cập nhật sản phẩm</string>
    <string name="btn_update_user">Cập nhật thông tin</string>
    <string name="confirm_dialog_title">Xác nhận</string>
    <string name="confirm_dialog_content">Dữ liệu đã xoá không thể hoàn tác. \nBạn có muốn xoá không?</string>
    <string name="them_san_pham">Thêm sản phẩm</string>
    <string name="them_vai_tro">Thêm vai trò</string>
    <string name="address">53, Võ Văn Ngân, Phường Linh Chiểu, Tp. Thủ Đức, Tp. HCM</string>
    <string name="btn_order_detail">Chi tiết</string>
    <string name="btn_order_phone">Gọi điện</string>
    <string name="btn_accept">Duyệt</string>
    <string name="btn_delete">Xoá</string>

    <string-array name="orderStatus">
        <item>Chưa xử lý</item>
        <item>Đang giao hàng</item>
        <item>Thành công</item>
        <item>Thất bại</item>
    </string-array>

    <string-array name="staffs">
        <item>Nguyễn Văn A</item>
        <item>Nguyễn Văn B</item>
        <item>Nguyễn Văn C</item>
        <item>Nguyễn Văn D</item>
        <item>Nguyễn Văn E</item>
    </string-array>

    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="reset_password">Reset mật khẩu</string>
    <string name="update_user">Cập nhật</string>


    <!--   Start Chu dinh hanh-->
    <string-array name="spinnerDefault_hours">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    <string-array name="spinnerDefault_second">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>
    <string name="action_search">Search</string>
    <string name="txt_total_cart_screen">Tổng thành tiền:</string>
    <string name="btn_txt_buy_cart_screen">Đặt món</string>
    <string name="fragment_home_txt_category">Danh mục</string>
    <string name="fragment_product_txt_content_size_price">$20</string>
    <string name="fragment_product_txt_descriptions">Chi tiết</string>
    <string name="fragment_product_txt_product_suggestive">Gợi ý sản phẩm</string>
    <string name="nav_logout">Đăng xuất</string>
    <!--   End Chu dinh hanh-->

</resources>
