<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/cardViewRecyclerItem">

    <LinearLayout
        android:gravity="center"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/title_recycler_margin_bottom"
            android:orientation="horizontal">

            <TextView
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Đơn hàng số: "
                android:textAllCaps="true"
                android:textSize="@dimen/textMedium"
                android:textColor="@color/textBlack"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvOrderId"
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/textMedium"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="01"
                android:textColor="@color/textBlack"/>
        </LinearLayout>

        <LinearLayout
            android:paddingHorizontal="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="Người đặt hàng: "
                    android:textColor="@color/textTitlePrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCustomerFullName"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Nguyễn Văn A"
                    android:textColor="@color/textBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Địa chỉ: "
                    android:textColor="@color/textTitlePrimary"
                    app:contentInsetStart="20dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="53 Võ Văn Ngân, P. Linh Chiểu, Tp. Thủ Đức, Tp. HCM"
                    android:textColor="@color/textBlack" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Số điện thoại: "
                    android:textColor="@color/textTitlePrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvPhone"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="0987654321"
                    android:textColor="@color/textBlack"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Tổng thành tiền: "
                    android:textColor="@color/textTitlePrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvTotal"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="200,000"
                    android:textColor="@color/textBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Thời gian đặt: "
                    android:textColor="@color/textTitlePrimary"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvCreatedAt"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="2023-05-07 05:28:48"
                    android:textColor="@color/textBlack"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/btn_order_margin_top"
            android:gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/btnOrderDetail"
                android:textSize="@dimen/textSmall"
                android:layout_marginRight="@dimen/button_order_recyler_margin"
                android:text="@string/btn_order_detail"
                app:backgroundTint="#337ab7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnPhone"
                android:textSize="@dimen/textSmall"
                android:layout_marginRight="@dimen/button_order_recyler_margin"
                android:text="@string/btn_order_phone"
                app:backgroundTint="#01b552"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnAccept"
                android:textSize="@dimen/textSmall"
                android:layout_marginRight="@dimen/button_order_recyler_margin"
                android:text="@string/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                app:backgroundTint="#3DABEC"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnDelete"
                android:text="@string/btn_delete"
                android:textSize="@dimen/textSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                app:backgroundTint="#fbac45"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>

